fix scroll carousel on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2058,98 +2058,103 @@ span a {
 
 .p-carousel {
     .p-carousel-content {
-        .p-carousel-items-container {
-            height: auto;
+        .p-carousel-items-content{
+            pointer-events: none;
 
-            .p-carousel-item {
+            .p-carousel-items-container {
                 height: auto;
-
-                .p-carousel-container {
-                    background: #1C1C24;
+    
+                .p-carousel-item {
                     height: auto;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: space-between;
-                    padding: 4em 2em;
-                    height: 460px;
-
-                    border-radius: 1.5em;
-
-                    .p-carousel-content {
+    
+                    .p-carousel-container {
+                        background: #1C1C24;
+                        height: auto;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
                         justify-content: space-between;
-                        height: 100% !important;
-                        width: 100% !important;
-
-                        span {
-                            font-family: Axiforma;
-                        }
-
-                        .p-carousel-body {
-                            text-align: center;
-                            font-size: 1.2em;
+                        padding: 4em 2em;
+                        height: 460px;
+    
+                        border-radius: 1.5em;
+    
+                        .p-carousel-content {
                             display: flex;
                             flex-direction: column;
-                            row-gap: 1em;
-
-                            @media(max-width: 968px) {
-                                font-size: 1.05em !important;
-                            }
-
-                            @media(max-width: 768px) {
-                                font-size: 1em !important;
-                            }
-
-                            .p-carousel-body__title {
-                                font-size: 1.2em;
-                                font-weight: 700;
-                                color: $EVI100;
-
-                                @media(max-width: 968px) {
-                                    font-size: 1em;
-                                }
-
-                                @media(max-width: 768px) {
-                                    font-size: 0.8em;
-                                }
-                            }
-                        }
-
-                        .p-carousel-footer {
-                            display: flex;
-                            flex-direction: column;
-                            align-self: flex-end;
-
+                            align-items: center;
+                            justify-content: space-between;
+                            height: 100% !important;
+                            width: 100% !important;
+    
                             span {
-                                text-align: end;
-                                color: $EVI100;
-
+                                font-family: Axiforma;
+                            }
+    
+                            .p-carousel-body {
+                                text-align: center;
+                                font-size: 1.2em;
+                                display: flex;
+                                flex-direction: column;
+                                row-gap: 1em;
+    
                                 @media(max-width: 968px) {
-                                    font-size: 0.9em;
+                                    font-size: 1.05em !important;
+                                }
+    
+                                @media(max-width: 768px) {
+                                    font-size: 1em !important;
+                                }
+    
+                                .p-carousel-body__title {
+                                    font-size: 1.2em;
+                                    font-weight: 700;
+                                    color: $EVI100;
+    
+                                    @media(max-width: 968px) {
+                                        font-size: 1em;
+                                    }
+    
+                                    @media(max-width: 768px) {
+                                        font-size: 0.8em;
+                                    }
                                 }
                             }
-
-                            span:nth-child(1) {
-                                font-weight: 700;
+    
+                            .p-carousel-footer {
+                                display: flex;
+                                flex-direction: column;
+                                align-self: flex-end;
+    
+                                span {
+                                    text-align: end;
+                                    color: $EVI100;
+    
+                                    @media(max-width: 968px) {
+                                        font-size: 0.9em;
+                                    }
+                                }
+    
+                                span:nth-child(1) {
+                                    font-weight: 700;
+                                }
                             }
                         }
-                    }
-
-                    &:hover {
-                        cursor: pointer;
-                        border: 1px solid $EVI100;
-
-                        .p-carousel-footer__link {
-                            color: $EVI100;
-                            text-decoration: underline;
+    
+                        &:hover {
+                            cursor: pointer;
+                            border: 1px solid $EVI100;
+    
+                            .p-carousel-footer__link {
+                                color: $EVI100;
+                                text-decoration: underline;
+                            }
                         }
                     }
                 }
             }
         }
+        
 
     }
 
